Fix iOS header overlap over inputs
Copies
https://github.com/NERC-CEH/irecord-app/commit/693b5c07108a878773fc822a8bd602dce82cfde4

--- a/src/common/styles/app.scss
+++ b/src/common/styles/app.scss
@@ -224,7 +224,7 @@ header .subtitle {
 
   .activity {
     color: $color-white;
-    background-color: $color-main-dark;
+    background-color: $color-blue-dark;
   }
 
   .surveys {
@@ -236,11 +236,6 @@ header .subtitle {
     color: $color-white;
     background-color: $color-black;
   }
-}
-
-// take into account iOS info header
-body.ios header #subheader {
-  margin-top: 18px;
 }
 
 // content bands
